<resources>
    <string name="app_name">How to Speak</string>
    <string name="design_by">Design by</string>
    <string name="team">team</string>
    <string name="login_google">Log in with Google</string>
    <string name="login_facebook">Log in with Facebook</string>
    <string name="search">Search</string>
    <string name="introduce_1">Login now for more features</string>
    <string name="features_built_by">Features are built by PlusTeam</string>
    <string name="introduce_2">Over 50,000 videos\nBuilt-in dictionary and word bank\nPresonal profile with learning stats
    \nVoice recording and playback functions</string>
    <string name="please_comeback_later">Please come back later</string>
    <string name="login_now">Login now</string>
    <string name="logout">Logout</string>
    <string name="watch">Watch</string>
    <string name="learn">Learn</string>
    <string name="my_page">My Page</string>
    <string name="more">More</string>

    <!-- Option menu string -->

    <string name="settings">Settings</string>
    <string name="invite_friends">Invite friends</string>
    <string name="guide">Guide</string>
    <string name="rate">Rate</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="instagram">Instagram</string>
    <string name="feed_back">Feedback</string>
    <string name="about">About</string>
    <string name="repeat_sentence">Repeat Sentence</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="record">Record</string>
    <string name="replay_video">Replay Video</string>
    <string name="category">Category</string>
    <string name="app_id">1350414125073730</string>
    <string name="featured_videos">Featured Videos</string>
    <string name="popular_videos">Popular Videos</string>
    <string name="recently_videos">Recently Videos</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
</resources>
