<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="@dimen/view_margin"
        android:src="@drawable/ic_logo_black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:text="@string/introduce_1"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/view_margin"
        android:gravity="center"
        android:text="@string/introduce_2" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_primary"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />
</LinearLayout>