<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />


    <com.ss.bottomnavigation.BottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorTabBar"
        app:mode="phone">

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_watch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tab_icon="@drawable/ic_play"
            app:tab_text="@string/watch" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_learn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tab_icon="@drawable/ic_book"
            app:tab_text="@string/learn" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_my_page"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tab_icon="@drawable/ic_user"
            app:tab_text="@string/my_page" />

        <com.ss.bottomnavigation.TabItem
            android:id="@+id/tab_more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:tab_icon="@drawable/ic_more"
            app:tab_text="@string/more" />

    </com.ss.bottomnavigation.BottomNavigation>

    <FrameLayout
        android:id="@+id/frame_fragment_containers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation" />
</RelativeLayout>
