<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/video_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/playerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorBlack"
            android:paddingLeft="@dimen/view_margin"
            android:paddingRight="@dimen/view_margin">

            <Button
                android:id="@+id/btn_previous_video"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@color/colorBlack"
                android:drawableLeft="@drawable/ic_previous"
                android:text="@string/previous"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />

            <Button
                android:id="@+id/btn_repeat_sentence"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/view_margin"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@color/colorBlack"
                android:drawableLeft="@drawable/ic_repeat"
                android:text="@string/repeat_sentence"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />


            <Button
                android:id="@+id/btn_next_video"

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:alpha="0.7"
                android:background="@color/colorBlack"
                android:drawableRight="@drawable/ic_next"
                android:text="@string/next"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <ListView
            android:id="@+id/listSubtitlte"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>
</merge>